--- a/src/pages/Signup.css
+++ b/src/pages/Signup.css
@@ -15,17 +15,20 @@
 }
 
 h4 {
-    background: rgb(199, 198, 212);
+    background: #F7F7F7;
 	padding: 20px 0;
 	font-size: 140%;
 	font-weight: 300;
 	text-align: center;
 	color: rgb(110, 111, 116);
-    margin: -16px -16px 16px -16px;
-    border-radius: 8px;
+	margin: -16px -16px 16px -16px;
 }
 
-input {
+.form-label {
+	display: inline-block;
+	text-align: center;
+}
+/* input {
     -webkit-transition: all 0.30s ease-in-out;
 	-moz-transition: all 0.30s ease-in-out;
 	-ms-transition: all 0.30s ease-in-out;
@@ -41,7 +44,7 @@ input {
 	padding: 3%;
 	color: #555;
 	font: 95% Arial, Helvetica, sans-serif;
-}
+} */
 
 input:focus {
     box-shadow: 0 0 5px #2d2d2e;
@@ -49,20 +52,20 @@ input:focus {
 	border: 1px solid #2d2d2e;
 }
 
-button {
-    box-sizing: border-box;
+/* button {
+    /* box-sizing: border-box;
 	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	width: 100%;
-	padding: 8%;
-	background: #696969;
+	-moz-box-sizing: border-box; */
+	/* width: 100%;
+	padding: 8%; */
+	/* background: #696969;
 	border-bottom: 2px solid #464647;
 	border-top-style: none;
 	border-right-style: none;
 	border-left-style: none;	
-    color: #fff;
-}
+    color: #fff; */
 
-button:hover {
+
+/* button:hover {
     background: rgb(41, 41, 41);
-}
+} */
